syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.demo.grpc.notification"; 
option java_outer_classname = "NotificationProto";

service NotificationService {
  rpc NotifyInsufficientStock (NotificationRequest) returns (NotificationResponse);
}

message NotificationRequest {
  string item_id = 1;
  string order_id = 2;
  int32 requested_qty = 3;
  string user_id = 4; 
}

message NotificationResponse {
  string status_message = 1;
}